kubernetes/applications/jellyfin/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: homelab
spec:
  serviceName: "jellyfin"
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        # Container
        - name: jellyfin
          image: jellyfin/jellyfin
          # Resources
          # resources:
          #   requests:
          #     gpu.intel.com/i915: 1
          # Ports
          ports:
            - name: jellyfin-http
              containerPort: 8096
              protocol: TCP
          # Probes
          livenessProbe:
            httpGet:
              path: /health
              port: jellyfin-http
          readinessProbe:
            httpGet:
              path: /
              port: jellyfin-http
            initialDelaySeconds: 5
            periodSeconds: 5
          # Volume Mounts
          volumeMounts:
            - name: jellyfin-data
              mountPath: /config
            - name: media-library
              mountPath: /mnt/media
      volumes:
        - name: media-library
          hostPath:
            path: /nfs/library
            type: Directory
  volumeClaimTemplates:
    - metadata:
        name: jellyfin-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 32Gi
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: homelab
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      name: jellyfin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: homelab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/client-max-body-size: "20m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade "websocket";
      proxy_set_header Connection "Upgrade";
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - jellyfin.mcmumf.dev
  #     secretName: jellyfin-cert
  rules:
    - host: jellyfin.mcmumf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
